I imported the aside.scss. I created the basic aside. I fixed the gradient.

--- a/sass/content.scss
+++ b/sass/content.scss
@@ -1,3 +1,7 @@
 body{
 background-image: linear-gradient(126deg, #2fcfba, #47a1ba);
+background-repeat: no-repeat;
+height: 52em;
+min-width: 60em;
+max-width: 100em;
 }
