added classes to aside and began to move things around

--- a/sass/aside.scss
+++ b/sass/aside.scss
@@ -5,3 +5,22 @@
   background-color: #1b3c50;
   margin: 1.333em;
 }
+
+.profile-Name{
+  font-family: Montserrat-Bold;
+  text-align: center;
+  color: #f7f7f7;
+  font-size: 15px;
+}
+
+.aside-Options{
+  text-align: center;
+  color: #f7f7f7;
+  font-size: 13px;
+}
+
+.aside-Titles{
+  text-align: left;
+  color: #f7f7f7;
+  font-size: 11px;
+}
