--- a/sass/aside.scss
+++ b/sass/aside.scss
@@ -7,7 +7,7 @@
 }
 
 .profile-Name{
-  font-family: Montserrat-Bold;
+  font-family: "Montserrat-Regular", sans-serif;
   text-align: center;
   color: #f7f7f7;
   font-size: 15px;
@@ -17,10 +17,12 @@
   text-align: center;
   color: #f7f7f7;
   font-size: 13px;
+  font-family: "Montserrat-Regular", sans-serif;
 }
 
 .aside-Titles{
   text-align: left;
   color: #f7f7f7;
   font-size: 11px;
+  font-family: "Montserrat-Bold", sans-serif;
 }
