added the circle to the aside

--- a/sass/aside.scss
+++ b/sass/aside.scss
@@ -26,3 +26,13 @@
   font-size: 11px;
   font-family: "Montserrat-Bold", sans-serif;
 }
+
+.circle{
+	width: 100px;
+	height: 100px;
+	background: #50e3c2;
+	-moz-border-radius: 50px;
+	-webkit-border-radius: 50px;
+	border-radius: 50px;
+  margin-left: 35px;
+}
