--- a/sass/content.scss
+++ b/sass/content.scss
@@ -5,3 +5,12 @@ height: 52em;
 min-width: 60em;
 max-width: 100em;
 }
+
+.hero-Content{
+  float: right;
+  background-color: #f7f7f7;
+}
+
+.scrolling-Content{
+  background-color: #f7f7f7;
+}
