moved boxes around with david

--- a/sass/aside.scss
+++ b/sass/aside.scss
@@ -1,9 +1,10 @@
 .aside{
   position: left;
-  height:30em;
-  width:11em;
+  height:720px;
+  width:176px;
   background-color: #1b3c50;
-  margin: 1.333em;
+  margin: 21px;
+  padding-right: 15px
 }
 
 .profile-Name{
