--- a/sass/header.scss
+++ b/sass/header.scss
@@ -1,7 +1,9 @@
 //Moved date and logout to the right
-.date-Log-Out{
-  float: right;
+header{
+  position: absolute;
+  margin-left: 250px;
 }
+
 
 //Page Breaks
 .page-Breaks{
