moving around header

--- a/sass/header.scss
+++ b/sass/header.scss
@@ -11,3 +11,17 @@ header{
   height: 2px;
   width: 674px;
 }
+
+.date-Log-Out{
+  float: right;
+  line-height: 15px;
+  padding-bottom: 10px;
+}
+
+.top-Break{
+ margin-top: 40px;
+}
+
+.header-Title-Text{
+margin-top: 10px;
+}
