--- a/sass/content.scss
+++ b/sass/content.scss
@@ -18,6 +18,7 @@ height: 900px;
   margin-left: 250px;
   margin-top: 60px;
   background-color: #f7f7f7;
+  padding-top: 0px;
 }
 
 .scrolling-Content{
