Created a fonts scss folder and created all the custom font colors for the index.html.

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,4 +2,5 @@
 @import "header";
 @import "content";
 @import "aside";
-@import "scrolling-bar-content"
+@import "scrolling-bar-content";
+@import "fonts";
