--- a/sass/content.scss
+++ b/sass/content.scss
@@ -24,3 +24,30 @@ height: 900px;
 .scrolling-Content{
   background-color: #f7f7f7;
 }
+
+.content-Title-Text{
+  padding-top: 10px;
+}
+
+.content-Subtitle-Text{
+  padding-top: 10px;
+}
+
+.current-Semester{
+  padding-top: 30px;
+  position: absolute;
+}
+
+.enrolled-Credit-Hours{
+  padding-left: 250px;
+  padding-top: 30px;
+}
+
+.academic-Standing{
+padding-left: 500px;
+margin-top: -40px;
+}
+
+.second-Break{
+margin-top: 10px;
+}
