--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -67,3 +67,33 @@
   font-size: 10px;
   color: #2e0a3a;
 }
+
+.grades-Complete-Text {
+  font-family: "Montserrat:300", sans-serif;
+  font-size: 30px;
+  color: #48a2ba;
+}
+
+.grades-Dates-Text {
+  font-family: "Montserrat:300", sans-serif;
+  font-size: 12px;
+  color: #4a4a4a;
+}
+
+.grades-Title-Text {
+  font-family: "Montserrat:700", sans-serif;
+  font-size: 10px;
+  color: #4ca2b9;
+}
+
+.grades-Percent {
+  font-family: "Montserrat:700", sans-serif;
+  font-size: 30px;
+  color: #33c7ba;
+}
+
+.grades-Subtitle-Text {
+  font-family: "Montserrat:300", sans-serif;
+  font-size: 12px;
+  color: #33c7ba;
+}
