moving scroll bar content

--- a/sass/content.scss
+++ b/sass/content.scss
@@ -59,8 +59,9 @@ margin-top: 10px;
 
 
 .upcoming-Due-Dates{
-  padding-left:350px;
+  padding-left:400px;
   margin-top: -100px;
+  width: 300px;
 }
 
 .third-Break{
@@ -69,4 +70,14 @@ margin-top: 10px;
 
 .content-Paragraph-Text{
 width: 355px;
+}
+
+.upcoming-Events{
+  padding-left: 450px;
+
+  width: 300px;
+}
+
+.college-Announcements{
+  margin-top: 30px;
 }
