written the font styling for the registration page.

--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -97,3 +97,39 @@
   font-size: 12px;
   color: #33c7ba;
 }
+
+.upc-C-Seven {
+  font-family: "Montserrat:700", sans-serif;
+  font-size: 14px;
+  color: #33c7ba;
+}
+
+.upc-Bl-13 {
+  font-family: "Montserrat:400", sans-serif;
+  font-size: 12px;
+  color: #20202020;
+}
+
+.upc-Bl-14 {
+  font-family: "Montserrat:400", sans-serif;
+  font-size: 14px;
+  color: #202020;
+}
+
+.upc-Course-List {
+  font-family: "Montserrat:400", sans-serif;
+  font-size: 15px;
+  color: #44ccc0;
+}
+
+.get-Help-Teal {
+  font-family: "Montserrat:700", sans-serif;
+  font-size: 12px;
+  color: #50e3c2;
+}
+
+.white-Twelve {
+  font-family: "Montserrat:700", sans-serif;
+  font-size: 12px;
+  color: #ffffff;
+}
