--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -1,42 +1,50 @@
 .header-Title-Text {
-  font-family: "Montserrat:400", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 10px;
   color: #1b3c50;
+  font-weight: 400;
+  letter-spacing: .2px;
 }
 
 .header-Date-Text {
-  font-family: "Montserrat:700", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 10px;
+  font-weight: 700;
   color: #1b3c50;
 }
 
 .header-Log-Out-Text {
-  font-family: "Montserrat:400", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 10px;
+  font-weight: 400;
   color: #52a5af;
 }
 
 .content-Title-Text {
-  font-family: "Montserrat:700", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 12px;
+  font-weight: 700;
   color: #48a2ba;
 }
 
 .content-Subtitle-Text {
-  font-family: "Montserrat:400", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 15px;
+  font-weight: 400;
   color: #202020;
 }
 
 .hero-Title-Text {
-  font-family: "Montserrat:700", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 12px;
+  font-weight: 700;
   color: #2e0a3a;
 }
 
 .content-Paragraph-Text {
   font-family: "Roboto Slab", sans-serif;
   font-size: 13px;
+  font-weight: 400;
   color: #373737;
 }
 
@@ -45,91 +53,106 @@
 }
 
 .schedule-Day-Text {
-  font-family: "Montserrat:400", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 10px;
+  font-weight: 400;
   color: #2e0a3a;
 }
 //These two class names are using a color close to white, so in order to see them you have to pace a background behind it.
 .current-Classname-Time {
-  font-family: "Montserrat:400", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 8px;
+  font-weight: 400;
   color: #f7f7f7
 }
 
 .current-Classname-Title {
-  font-family: "Montserrat:400", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 10px;
+  font-weight: 400;
   color: #f7f7f7
 }
 
 .view-As {
-  font-family: "Montserrat:700", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 10px;
+  font-weight: 400;
   color: #2e0a3a;
 }
 
 .grades-Complete-Text {
-  font-family: "Montserrat:300", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 30px;
+  font-weight: 300;
   color: #48a2ba;
 }
 
 .grades-Dates-Text {
-  font-family: "Montserrat:300", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 12px;
+  font-weight: 300;
   color: #4a4a4a;
 }
 
 .grades-Title-Text {
-  font-family: "Montserrat:700", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 10px;
+  font-weight: 700;
   color: #4ca2b9;
 }
 
 .grades-Percent {
-  font-family: "Montserrat:700", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 30px;
+  font-weight: 700;
   color: #33c7ba;
 }
 
 .grades-Subtitle-Text {
-  font-family: "Montserrat:300", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 12px;
+  font-weight: 300;
   color: #33c7ba;
 }
 
 .upc-C-Seven {
-  font-family: "Montserrat:700", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 14px;
+  font-weight: 700;
   color: #33c7ba;
 }
 
 .upc-Bl-13 {
-  font-family: "Montserrat:400", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 12px;
+  font-weight: 400;
   color: #20202020;
 }
 
 .upc-Bl-14 {
-  font-family: "Montserrat:400", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 14px;
+  font-weight: 400;
   color: #202020;
 }
 
 .upc-Course-List {
-  font-family: "Montserrat:400", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 15px;
+  font-weight: 400;
   color: #44ccc0;
 }
 
 .get-Help-Teal {
-  font-family: "Montserrat:700", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 12px;
+  font-weight: 700;
   color: #50e3c2;
 }
 
 .white-Twelve {
-  font-family: "Montserrat:700", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 12px;
+  font-weight: 700;
   color: #ffffff;
 }
