--- a/sass/header.scss
+++ b/sass/header.scss
@@ -12,14 +12,25 @@ header{
   width: 674px;
 }
 
-.date-Log-Out{
-  float: right;
-  line-height: 15px;
-}
-
 .top-Break{
- margin-top: 40px;
+ margin-top: 45px;
 }
 
-.header-Title-Text{ 
+.header-Title-Text{
+}
+
+.body-Header h4 {
+  position: absolute;
+  margin-top: 25px;
+}
+
+.date-Log-Out {
+  position: absolute;
+  margin-top: 10px;
+  margin-left: 600px;
+  text-align: right;
+}
+
+.date-Log-Out li {
+ line-height: -10px;
 }
