--- a/sass/content.scss
+++ b/sass/content.scss
@@ -28,14 +28,6 @@ height: 745px;
 }
 
 //These two give each text spacing between them.
-.content-Title-Text{
-  padding-top: 10px;
-}
-
-.content-Subtitle-Text{
-  padding-top: 10px;
-}
-
 //These three are moved around to make them align.
 .current-Semester{
   padding-top: 30px;
@@ -49,20 +41,24 @@ height: 745px;
 
 .academic-Standing{
 padding-left: 500px;
-margin-top: -40px;
+margin-top: -26px;
 }
 
 //Moves the page break.
 .second-Break{
-margin-top: 10px;
+margin-top: 20px;
 }
 
 //Moved the upcoming dates into the correct position.
 .upcoming-Due-Dates{
   position: absolute;
   padding-left:400px;
-  margin-top: -70px;
+  margin-top: -115px;
   width: 300px;
+}
+
+.upcoming-Due-Dates h4 {
+  padding-top: 20px;
 }
 
 //This is the thrid page break
@@ -82,11 +78,27 @@ width: 355px;
   position: absolute;
   padding-left: 400px;
   width: 300px;
-  margin-top: 100px;
+  margin-top: 90px;
 }
 
 .college-Announcements{
   position: absolute;
-  margin-top: 30px;
-  margin-top: 100px;
+  margin-top: 110px;
+}
+
+.college-Announcements h1{
+  margin-top: 20px;
+}
+
+.scrolling-Content p{
+  padding-top: 10px;
+  line-height: 20px;
+}
+
+.upcoming-Events h4{
+  padding-top: 20px;
+}
+
+.scrolling-Content .program {
+  margin-bottom: 20px;
 }
