--- a/sass/content.scss
+++ b/sass/content.scss
@@ -54,6 +54,7 @@ margin-top: 20px;
   margin: 11px;
   width: 152px;
   height: 152px;
+}
 
 //Moved the upcoming dates into the correct position.
 .upcoming-Due-Dates{
