--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -25,6 +25,7 @@
   font-size: 12px;
   font-weight: 700;
   color: #48a2ba;
+  white-space: nowrap;
 }
 
 .content-Subtitle-Text {
@@ -39,6 +40,7 @@
   font-size: 12px;
   font-weight: 700;
   color: #2e0a3a;
+  white-space: nowrap;
 }
 
 .content-Paragraph-Text {
