--- a/sass/schedule.scss
+++ b/sass/schedule.scss
@@ -35,7 +35,7 @@
   line-height: 12px;
   letter-spacing: 0.2px;
   text-align: center;
-  visibility: hidden;
+  visibility: visible;
 }
 .monday{
   position: absolute;
