idk if this is working but I'm trying more stuff

--- a/sass/schedule.scss
+++ b/sass/schedule.scss
@@ -36,6 +36,7 @@
   letter-spacing: 0.2px;
   text-align: center;
   visibility: visible;
+  display: inline-block;
 }
 .monday{
   position: absolute;
