made another box

--- a/sass/upcoming-courses.scss
+++ b/sass/upcoming-courses.scss
@@ -61,3 +61,38 @@
   text-align: center;
   margin-top: 65px;
 }
+
+.pop-Up-2a{
+  background-color: #f7f7f7;
+  width: 444px;
+  height: 223px;
+  float: right;
+  margin-right: 400px;
+  padding-left: 36px;
+  padding-top: 30px;
+  line-height: 25px;
+}
+
+.dropdown-Menu-Class-Selection{
+  width: 272px;
+  height: 29px;
+}
+
+.pop-Up-1{
+  background-color: #f7f7f7;
+  width: 444px;
+  height: 223px;
+  float: right;
+  margin-right: 100px;
+  padding-left: 36px;
+  padding-top: 30px;
+  line-height: 25px;
+}
+
+.next-Button{
+  background-color: #3bb9ba;
+  width: 114px;
+  height: 42px;
+  text-align: center;
+  margin-top: 65px;
+}
