I think css is finished for schedule page. Calendar is hidden. Need JS added to change when clicked.

--- a/sass/schedule-calendar.scss
+++ b/sass/schedule-calendar.scss
@@ -1,7 +1,7 @@
 .current-Schedule{
   position: absolute;
   margin-top: -500px;
-  margin-left: 220px;
+  margin-left: 210px;
 }
 .content-Title-Text{
   letter-spacing: 0.2px;
@@ -35,8 +35,7 @@
   line-height: 12px;
   letter-spacing: 0.2px;
   text-align: center;
-  visibility: visible;
-  display: inline-block;
+  visibility: hidden;
 }
 .monday{
   position: absolute;
