wait more changes

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -18,3 +18,7 @@ height: 745px;
   height: 370px;
   padding-top: 165px;
 }
+
+.school-Name , .student-Portal , .email-Entry , .password-Entry{
+  text-align: center;
+}
