--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -158,3 +158,10 @@
   font-size: 12px;
   color: #ffffff;
 }
+
+.date-Font {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 10px;
+  color: #4ca2b9;
+}
