--- a/sass/index.scss
+++ b/sass/index.scss
@@ -22,3 +22,6 @@ height: 745px;
 .school-Name , .student-Portal , .email-Entry , .password-Entry{
   text-align: center;
 }
+.login-Portal{
+  background-color: #ffffff;
+}
