--- a/sass/content.scss
+++ b/sass/content.scss
@@ -116,3 +116,17 @@ width: 355px;
 .content {
   margin-bottom: 20px;
 }
+
+.log-Out{
+  background-color: #f7f7f7;
+  width: 361px;
+  height: 146px;
+  padding-top: 30px;
+  padding-left: 36px;
+}
+
+.log-Out-Button{
+  background-color: #3bb9ba;
+  width: 114px;
+  height: 42px;
+}
