Fixed the homepage

--- a/sass/content.scss
+++ b/sass/content.scss
@@ -116,3 +116,17 @@ width: 355px;
 .content {
   margin-bottom: 20px;
 }
+
+.homepage-Header {
+  margin-left: -10px;
+}
+
+.homepage-Aside {
+  position: absolute;
+  margin-top: -740px;
+  margin-left: 20px;
+}
+
+.homepage-Hero-Content {
+  margin-top: -670px;
+}
