--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -165,3 +165,17 @@
   font-size: 10px;
   color: #4ca2b9;
 }
+
+.dashboard-Grade-Text {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 12px;
+  color: #4a4a4a;
+}
+
+.academic-Grade-Percentage-Text {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  color: #48a2ba;
+}
