--- a/sass/upcoming-courses.scss
+++ b/sass/upcoming-courses.scss
@@ -1,5 +1,5 @@
 .pop-Up-2c{
-  background-color: #f7f7f7;
+  background-color: #ffffff;
   width: 444px;
   height: 345px;
   float: right;
@@ -25,7 +25,7 @@
 }
 
 .pop-Up-2b{
-  background-color: #f7f7f7;
+  background-color: #ffffff;
   width: 444px;
   height: 257px;
   float: right;
@@ -44,7 +44,7 @@
 }
 
 .pop-Up-2d{
-  background-color: #f7f7f7;
+  background-color: #ffffff;
   width: 444px;
   height: 223px;
   float: right;
@@ -63,7 +63,7 @@
 }
 
 .pop-Up-2a{
-  background-color: #f7f7f7;
+  background-color: #ffffff;
   width: 444px;
   height: 223px;
   float: right;
@@ -79,7 +79,7 @@
 }
 
 .pop-Up-1{
-  background-color: #f7f7f7;
+  background-color: #ffffff;
   width: 444px;
   height: 223px;
   float: right;
@@ -95,4 +95,94 @@
   height: 42px;
   text-align: center;
   margin-top: 65px;
+}
+
+.no-Classes-Registered{
+  background-color: #ffffff;
+  width: 496px;
+  height: 155px;
+  padding-top: 59px;
+  padding-left: 180px;
+  margin-left: 230px;
+  margin-top: -500px;
+}
+
+.spring-Registration{
+  padding-left: 50px;
+}
+
+.start-Button{
+  background-color: #3bb9ba;
+  width: 114px;
+  height: 32px;
+  text-align: center;
+  margin-top: 25px;
+  margin-left: 100px;
+  padding-top: 10px;
+}
+
+.upc-Schedule-Geneds{
+  background-color: #ffffff;
+  width: 672px;
+  height: 393px;
+  float: right;
+  margin-left: 300px;
+  padding-top: 24px;
+}
+
+.registration-Completion{
+  padding-left: 20px;
+}
+
+.percent-Sixty{
+  padding-left: 600px;
+}
+
+.completion-Bar{
+  background-image: -webkit-gradient(linear, left top, right top, color-stop(0, #50E3C2), color-stop(100, #359CA1));
+  width: 642px;
+  height: 5px;
+  margin-left: 15px;
+}
+
+.gen-Eds{
+  padding-left: 20px;
+  padding-top: 20px;
+}
+
+.gen-Eds-Selection{
+  padding-left: 40px;
+  padding-top: 15px;
+  line-height: 40px;
+}
+
+.line-Space{
+  background-color: #359ca1;
+  width: 575px;
+  height: 1px;
+}
+
+.computer-Information-Systems{
+  background-color: #ffffff;
+  width: 676px;
+  height: 393px;
+  float: right;
+  margin-left: 300px;
+  padding-top: 24px;
+}
+
+.english{
+  background-color: #ffffff;
+  width: 676px;
+  height: 417px;
+  margin-left: 500px;
+  float: left;
+}
+
+.core-Course{
+  background-color: #ffffff;
+  width: 676px;
+  height: 331px;
+  float: right;
+  margin-left: 400px;
 }
