made more pages

--- a/sass/upcoming-courses.scss
+++ b/sass/upcoming-courses.scss
@@ -125,9 +125,9 @@
   background-color: #ffffff;
   width: 672px;
   height: 393px;
-  float: right;
-  margin-left: 300px;
   padding-top: 24px;
+  margin-left: 250px;
+  margin-top: -450px;
 }
 
 .registration-Completion{
@@ -166,23 +166,23 @@
   background-color: #ffffff;
   width: 676px;
   height: 393px;
-  float: right;
-  margin-left: 300px;
   padding-top: 24px;
+  margin-left: 250px;
+  margin-top: -450px;
 }
 
 .english{
   background-color: #ffffff;
   width: 676px;
   height: 417px;
-  margin-left: 500px;
-  float: left;
+  margin-left: 250px;
+  margin-top: -450px;
 }
 
 .core-Course{
   background-color: #ffffff;
   width: 676px;
   height: 331px;
-  float: right;
-  margin-left: 400px;
+  margin-left: 250px;
+  margin-top: -430px;
 }
