finished touching up Dashboard

--- a/sass/academic-dashboard.scss
+++ b/sass/academic-dashboard.scss
@@ -21,16 +21,26 @@
 
 .dashboard-105 .dashboard-Grade-Text {
   position: absolute;
-  margin-left: 53px;
-  margin-top: 120px;
+  margin-left: 28px;
+  margin-top: 35px;
   width: 80px;
   text-align: center;
 }
 
 .dashboard-105 .academic-Grade-Percentage-Text {
   position: absolute;
-  margin-left: 75px;
-  margin-top: 150px;
+  margin-left: 27px;
+  margin-top: 66px;
+}
+
+.dashboard-105 .academic-Circle-Grey {
+  position: absolute;
+  width: 133px;
+  height: 133px;
+  border-radius: 50%;
+  border: 8px solid #d8d8d8;
+  margin-top: 86px;
+  margin-left: 20px;
 }
 
 .dashboard-110 {
@@ -53,17 +63,28 @@
 
 .dashboard-110 .dashboard-Grade-Text {
   position: absolute;
-  margin-left: 53px;
-  margin-top: 120px;
+  margin-left: 28px;
+  margin-top: 35px;
   width: 80px;
   text-align: center;
 }
 
 .dashboard-110 .academic-Grade-Percentage-Text {
   position: absolute;
-  margin-left: 75px;
-  margin-top: 150px;
+  margin-left: 27px;
+  margin-top: 66px;
 }
+
+.dashboard-110 .academic-Circle-Grey {
+  position: absolute;
+  width: 133px;
+  height: 133px;
+  border-radius: 50%;
+  border: 8px solid #d8d8d8;
+  margin-top: 86px;
+  margin-left: 20px;
+}
+
 
 .dashboard-115 {
   margin-top: 260px;
@@ -85,17 +106,28 @@
 
 .dashboard-115 .dashboard-Grade-Text {
   position: absolute;
-  margin-left: 53px;
-  margin-top: 120px;
+  margin-left: 28px;
+  margin-top: 35px;
   width: 80px;
   text-align: center;
 }
 
 .dashboard-115 .academic-Grade-Percentage-Text {
   position: absolute;
-  margin-left: 75px;
-  margin-top: 150px;
+  margin-left: 27px;
+  margin-top: 66px;
 }
+
+.dashboard-115 .academic-Circle-Grey {
+  position: absolute;
+  width: 133px;
+  height: 133px;
+  border-radius: 50%;
+  border: 8px solid #d8d8d8;
+  margin-top: 96px;
+  margin-left: 20px;
+}
+
 
 .dashboard-120 {
   margin-top: 260px;
@@ -118,17 +150,28 @@
 
 .dashboard-120 .dashboard-Grade-Text {
   position: absolute;
-  margin-left: 53px;
-  margin-top: 120px;
+  margin-left: 28px;
+  margin-top: 35px;
   width: 80px;
   text-align: center;
 }
 
 .dashboard-120 .academic-Grade-Percentage-Text {
   position: absolute;
-  margin-left: 75px;
-  margin-top: 150px;
+  margin-left: 27px;
+  margin-top: 66px;
 }
+
+.dashboard-120 .academic-Circle-Grey {
+  position: absolute;
+  width: 133px;
+  height: 133px;
+  border-radius: 50%;
+  border: 8px solid #d8d8d8;
+  margin-top: 86px;
+  margin-left: 20px;
+}
+
 
 .dashboard-137K {
   margin-top: 520px;
@@ -150,17 +193,28 @@
 
 .dashboard-137K .dashboard-Grade-Text {
   position: absolute;
-  margin-left: 53px;
-  margin-top: 120px;
+  margin-left: 28px;
+  margin-top: 35px;
   width: 80px;
   text-align: center;
 }
 
 .dashboard-137K .academic-Grade-Percentage-Text {
   position: absolute;
-  margin-left: 75px;
-  margin-top: 150px;
+  margin-left: 27px;
+  margin-top: 66px;
 }
+
+.dashboard-137K .academic-Circle-Grey {
+  position: absolute;
+  width: 133px;
+  height: 133px;
+  border-radius: 50%;
+  border: 8px solid #d8d8d8;
+  margin-top: 86px;
+  margin-left: 20px;
+}
+
 
 .dashboard-106J {
   margin-top: 520px;
@@ -183,17 +237,28 @@
 
 .dashboard-106J .dashboard-Grade-Text {
   position: absolute;
-  margin-left: 53px;
-  margin-top: 120px;
+  margin-left: 28px;
+  margin-top: 35px;
   width: 80px;
   text-align: center;
 }
 
 .dashboard-106J .academic-Grade-Percentage-Text {
   position: absolute;
-  margin-left: 75px;
-  margin-top: 150px;
+  margin-left: 27px;
+  margin-top: 66px;
 }
+
+.dashboard-106J .academic-Circle-Grey {
+  position: absolute;
+  width: 133px;
+  height: 133px;
+  border-radius: 50%;
+  border: 8px solid #d8d8d8;
+  margin-top: 86px;
+  margin-left: 20px;
+}
+
 
 .dashboard-Right-Content {
   position: absolute;
