--- a/sass/header.scss
+++ b/sass/header.scss
@@ -21,6 +21,17 @@ header{
   margin-top: 30px;
 }
 
+.header-Title-Text-Two {
+  position: absolute;
+  margin-left: 169px;
+  margin-top: 30px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 10px;
+  color: #48a2ba;
+  font-weight: 400;
+  letter-spacing: .2px;
+}
+
 .date-Log-Out {
   position: absolute;
   margin-top: 10px;
