--- a/sass/upcoming-courses.scss
+++ b/sass/upcoming-courses.scss
@@ -2,11 +2,11 @@
   background-color: #ffffff;
   width: 444px;
   height: 345px;
-  float: right;
-  margin-right: 700px;
   padding-left: 36px;
   padding-top: 30px;
   line-height: 25px;
+  margin-left: 350px;
+  margin-top: -450px;
 }
 
 .submit-Button{
@@ -14,7 +14,7 @@
   width: 114px;
   height: 42px;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 25px;
 }
 
 .text-Box{
@@ -47,11 +47,11 @@
   background-color: #ffffff;
   width: 444px;
   height: 223px;
-  float: right;
-  margin-right: 100px;
   padding-left: 36px;
   padding-top: 30px;
   line-height: 25px;
+  margin-left: 350px;
+  margin-top: -450px;
 }
 
 .thanks-Button{
@@ -66,11 +66,11 @@
   background-color: #ffffff;
   width: 444px;
   height: 223px;
-  float: right;
-  margin-right: 400px;
   padding-left: 36px;
   padding-top: 30px;
   line-height: 25px;
+  margin-left: 350px;
+  margin-top: -400px;
 }
 
 .dropdown-Menu-Class-Selection{
@@ -82,11 +82,11 @@
   background-color: #ffffff;
   width: 444px;
   height: 223px;
-  float: right;
-  margin-right: 100px;
   padding-left: 36px;
   padding-top: 30px;
   line-height: 25px;
+  margin-top: -450px;
+  margin-left: 300px;
 }
 
 .next-Button{
